app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require bootstrap.min
 *= require_tree .
 *= require_self
 */

html,body
{
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  /*overflow-x: hidden;*/
}

body {
  background-color: #f0eae8;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Amatic SC', cursive;
  text-shadow: 2px 2px #cccccc;
}

h1 {
  font-size: 116px;
}

h2 {
  font-size: 52px;
}

h3 {
  font-size: 36px;
}

hr {
  width: 100px;
  border: .75px solid;
}

p {
  font-size: 18px;
}

a {
  color: #000000;
}

a:hover {
  color: #f3eeed;
}

.carousel .item {
  width: 100%;
  max-height: 400px;
}
.carousel .item img {
  width: 100%;
}

.overlay {
  color: #000000;
  position: absolute;
  z-index: 12;
  top: 10%;
  width: 100%;
  text-align:center;
}

.container {
  padding: 20px 40px;
  background: rgba(255,255,255,0.5);
}

.box {
  margin-bottom: 20px;
  margin-left: 20%;
  margin-right: 20%;
  padding: 40px 20px;
  width: 60%;
  background: #fff;
  background: rgba(255,255,255,0.5);
}

.well {
  border-radius: 0;
}

.navbar-nav {
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: 3px;
}

.btn.outline {
  background: none;
  padding: 12px 22px;
}

.btn.back-white {
  background-color: white;
  padding: 12px 22px;
}

.btn-primary.outline {
    border: 2px solid #E6E6E6;
    color: #E6E6E6;
}

.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
    color: #E5D5D5;
    border-color: #E5D5D5;
}

.btn-primary.outline:active, .btn-primary.outline.active {
    border-color: #007299;
    color: #007299;
    box-shadow: none;
}

.col-centered{
  margin: 0 auto;
  width: auto;
  display: inline-block;
}

.nopadding {
   padding: 0;
   margin: 0;
}

.superclear {
  clear: both;
}

.white {
  color: #cccccc;
}

.features {
  letter-spacing: 2px;
  font-size: 18px;
}

.features .glyphicon {
  font-size: 52px;
  margin: 0 auto;
}

.clip-path {
  position: relative;
  float: left;
  margin: 20px;
  height: 300px;
  width: 294px;
  background: #c6aba6;
  padding: 4px;
  transition: all 1s;
}

.clip-path.lr {
  position: relative;
  float: left;
  margin: 20px;
  height: 300px;
  width: 342px;
  background: #297373;
  padding: 4px;
  transition: all 1s;
  margin: 20px 0;
  -webkit-clip-path: polygon(0% 100%, 15% 0%, 100% 0%, 85% 100%);
}

.clip-path.left {
  margin: 20px 0;
  -webkit-clip-path: polygon(17% 0%, 100% 0%, 100% 100%, 0% 100%);
  right: 40px;
}

.clip-path.right {
  margin: 20px 0;
  -webkit-clip-path: polygon(0 100%, 0 0, 100% 0, 83% 100%);
  left:40px;
}

.clip-path-vert {
  position: relative;
  float: left;
  height: 200px;
  width: 100%;
  background: #c6aba6;
  padding: 30px;
  transition: all 1s;
}

.clip-path-vert.tb {
  position: relative;
  float: left;
  height: 250px;
  width: 100%;
  background: #297373;
  padding: 30px;
  transition: all 1s;
  -webkit-clip-path: polygon(0% 20%, 100% 0%, 100% 80%, 0% 100%);
}

.clip-path-vert.bottom {
  -webkit-clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
}

.clip-path-vert.top {
  -webkit-clip-path: polygon(0% 20%, 100% 0%, 100% 100%, 0% 100%);
}

.clip-path .content {
  position: absolute;
  content: '';
  height: calc(100% - 10px);
  width: calc(100% - 8px);
  margin-top: 20%;
}

.clip-path-vert .content {
  position: absolute;
  content: '';
  height: calc(100% - 10px);
  width: calc(100% - 8px);
  margin-top: 40px;
}

.clip-path.left .content {
  -webkit-clip-path: polygon(17% 0%, 100% 0%, 100% 100%, 0% 100%);
}

@media screen and (min-width:1200px) {
  .box:after {
    content: '';
    display: table;
    clear: both;
  }
}

@media (max-width: 767px) {
  .block {
    margin-left: -20px;
    margin-right: -20px;
  }

  h1 {
    font-size: 72px;
  }
}

@media screen and (max-width:600px) {
  .overlay {
    top: 10%;
  }
}

@media screen and (min-width:768px) {
  .navbar {
    border-radius: 0;
  }

  .navbar-header {
    display: none;
  }

  .navbar {
    min-height: 0;
  }

  .navbar-default {
    border: none;
    background: #fff;
    background: rgba(255,255,255,0.9);
  }

  .nav>li>a {
    padding: 35px;
  }

  .navbar-nav>li>a {
    line-height: normal;
  }

  .navbar-nav {
    display: table;
    float: none;
    margin: 0 auto;
    table-layout: fixed;
    font-size: 1.25em;
  }
}

@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('../assets/glyphicons-halflings-regular.eot');
  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
  url('../assets/glyphicons-halflings-regular.woff') format('woff'),
  url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
  url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

